--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/tyronstorage20/ruffle/ruffle.js"></script>
 
-<object width="1900" height="1050">
+<object width="100%" height="100%">
     <param name="movie" value="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/unblockedgameworld/impossiblequiz2.swf">
-    <embed src="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/unblockedgameworld/impossiblequiz2.swf" width="1900" height="1050">
+    <embed src="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/unblockedgameworld/impossiblequiz2.swf" width="100%" height="100%">
